Fixed overflow issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,11 +122,12 @@ body {
 
 /* ----- NAVIGATION BAR ----- */
 
-header,
-footer,
-main,
+html,
 body {
-  width: 100%;
+  overflow-x: hidden;
+}
+body {
+  position: relative;
 }
 
 nav {
